# libsnark_playground

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  range-prove.cpp  range-setup.cpp  range-verify.cpp
